--- a/index.html
+++ b/index.html
@@ -23,20 +23,22 @@
 
   <style>
     :root{
-      --brand:#2C1C14;               /* marrone logo */
+      --brand:#2C1C14;
       --bg:#FBF8F5;                  /* avorio */
       --card:#FFFFFF;
       --text:#0B1220;
       --muted: rgba(78,74,69,.82);
       --line: rgba(44,28,20,.14);
-      --radius:24px;
+
       --shadow: 0 18px 42px rgba(11,18,32,.08);
       --shadow2: 0 10px 22px rgba(11,18,32,.08);
+      --radius:24px;
       --focus: rgba(44,28,20,.18);
     }
 
     *{box-sizing:border-box}
     html,body{margin:0}
+
     body{
       font-family:"Montserrat", ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial;
       color:var(--text);
@@ -147,17 +149,17 @@
       box-shadow:0 14px 26px rgba(44,28,20,.18);
     }
 
-    /* SVG ICONS (zero file, zero rotture) */
+    /* ICON STANDARD PREMIUM: tutto pieno, marrone uniforme */
     .ico{
-      width:22px;height:22px;flex:0 0 auto;
-      stroke: currentColor;
-      stroke-width:2.2;
-      fill:none;
-      stroke-linecap:round;
-      stroke-linejoin:round;
+      width: clamp(20px, 4.5vw, 24px);
+      height: clamp(20px, 4.5vw, 24px);
+      flex:0 0 auto;
+      fill: currentColor;
+      stroke:none;
+      display:block;
     }
-    .ico.fill{ fill: currentColor; stroke:none; }
 
+    /* Sezioni */
     .section{
       padding:18px;
       background:#fff;
@@ -222,7 +224,7 @@
       .video iframe{height:300px;}
     }
 
-    /* SOCIAL — grandi, senza contorno */
+    /* SOCIAL — grandi, pieni, senza contorno */
     .social{
       display:flex;
       gap:18px;
@@ -245,15 +247,12 @@
       opacity:.92;
     }
     .soc:hover{ transform:translateY(-1px); opacity:1; }
-    .soc svg{ width:34px;height:34px; display:block; }
-    .soc svg path, .soc svg circle, .soc svg rect{
-      stroke: var(--brand);
-      fill:none;
-      stroke-width:2.2;
-      stroke-linecap:round;
-      stroke-linejoin:round;
+    .soc svg{
+      width: clamp(30px, 7vw, 38px);
+      height: clamp(30px, 7vw, 38px);
+      fill: var(--brand);
+      display:block;
     }
-    .soc.tiktok svg path{ fill: var(--brand); stroke:none; }
 
     /* Sticky bottom */
     .sticky{
@@ -310,7 +309,6 @@
 
       <!-- LOGO -->
       <div class="logo-wrap">
-        <!-- Usa il tuo file logo corretto -->
         <img class="logo" src="./logo%20moretti.jpg" alt="Azienda Agricola Moretti" loading="eager" decoding="async">
       </div>
 
@@ -331,21 +329,21 @@
       <!-- AZIONI PRINCIPALI -->
       <div class="actions">
 
-        <!-- WhatsApp: impostato su ANDREA (mobile). Se avete WhatsApp Business diverso, dimmelo e lo cambio. -->
+        <!-- WhatsApp (marrone premium) — impostato su ANDREA -->
         <a class="btn primary"
            href="https://wa.me/393465740673?text=Salve%2C%20ho%20scansionato%20il%20QR%20code%20e%20vorrei%20informazioni%20su%20prodotti%20e%20disponibilit%C3%A0."
            aria-label="WhatsApp">
           <svg class="ico" viewBox="0 0 24 24" aria-hidden="true">
-            <path d="M20 11.6a8 8 0 0 1-11.9 6.9L4 19l.6-4.1A8 8 0 1 1 20 11.6z"></path>
-            <path d="M8.8 9.1c.2-.3.4-.3.6-.3h.5c.2 0 .4.1.5.4l.7 1.7c.1.2.1.4 0 .6l-.3.4c-.1.2-.1.3 0 .5.3.6.8 1.2 1.4 1.6.2.1.4.1.5 0l.5-.5c.2-.2.3-.2.6-.1l1.8.8c.2.1.3.2.3.4 0 .6-.4 1.1-1 1.3-.6.2-1.3.2-2-.1-2.3-1-3.8-3.2-3.9-3.4-.4-.5-1.2-1.6-1.2-2.5 0-.9.4-1.4.7-1.7z"
-                  fill="currentColor" stroke="none"></path>
+            <path d="M12 2a9 9 0 0 0-7.8 13.5L3 22l6.7-1.8A9 9 0 1 0 12 2z"/>
+            <path d="M9.3 7.6c.2-.3.4-.3.6-.3h.5c.2 0 .4.1.5.4l.7 1.7c.1.2.1.4 0 .6l-.3.4c-.1.2-.1.3 0 .5.3.6.8 1.2 1.4 1.6.2.1.4.1.5 0l.5-.5c.2-.2.3-.2.6-.1l1.8.8c.2.1.3.2.3.4 0 .6-.4 1.1-1 1.3-.6.2-1.3.2-2-.1-2.3-1-3.8-3.2-3.9-3.4-.4-.5-1.2-1.6-1.2-2.5 0-.9.4-1.4.7-1.7z"/>
           </svg>
           WhatsApp
         </a>
 
+        <!-- Telefono fisso (icona piena corretta) -->
         <a class="btn" href="tel:+390688936064" aria-label="Chiama (fisso)">
           <svg class="ico" viewBox="0 0 24 24" aria-hidden="true">
-            <path d="M22 16.9v2a2 2 0 0 1-2.2 2 18.7 18.7 0 0 1-8.2-3 18.5 18.5 0 0 1-5.7-5.7 18.7 18.7 0 0 1-3-8.2A2 2 0 0 1 4 2h2a2 2 0 0 1 2 1.7c.1.9.3 1.7.6 2.5a2 2 0 0 1-.5 2.1L7.3 9.1a14.5 14.5 0 0 0 5.6 5.6l.8-.8a2 2 0 0 1 2.1-.5c.8.3 1.6.5 2.5.6A2 2 0 0 1 22 16.9z"/>
+            <path d="M21 16.5v3a2 2 0 0 1-2.2 2A19 19 0 0 1 3.5 6.2 2 2 0 0 1 5.5 4h3a2 2 0 0 1 2 1.6c.2 1 .5 1.9.9 2.8a2 2 0 0 1-.5 2.2l-1.2 1.2a15.5 15.5 0 0 0 6.5 6.5l1.2-1.2a2 2 0 0 1 2.2-.5c.9.4 1.8.7 2.8.9A2 2 0 0 1 21 16.5z"/>
           </svg>
           Chiama (fisso)
         </a>
@@ -355,16 +353,16 @@
            target="_blank" rel="noopener noreferrer" referrerpolicy="no-referrer"
            aria-label="Naviga">
           <svg class="ico" viewBox="0 0 24 24" aria-hidden="true">
-            <path d="M12 21s-6-5.3-6-10a6 6 0 1 1 12 0c0 4.7-6 10-6 10z"/>
-            <circle cx="12" cy="11" r="2"/>
+            <path d="M12 22s-7-5.8-7-11a7 7 0 1 1 14 0c0 5.2-7 11-7 11z"/>
+            <path d="M12 13.2a2.2 2.2 0 1 0 0-4.4 2.2 2.2 0 0 0 0 4.4z"/>
           </svg>
           Naviga
         </a>
 
         <button class="btn" type="button" id="saveContact" aria-label="Salva contatto">
           <svg class="ico" viewBox="0 0 24 24" aria-hidden="true">
-            <circle cx="12" cy="7" r="4"></circle>
-            <path d="M4 21v-2a4 4 0 0 1 4-4h8a4 4 0 0 1 4 4v2"></path>
+            <path d="M12 12.2a4.2 4.2 0 1 0-4.2-4.2A4.2 4.2 0 0 0 12 12.2z"/>
+            <path d="M4 22v-1.2a6.5 6.5 0 0 1 6.5-6.5h3A6.5 6.5 0 0 1 20 20.8V22z"/>
           </svg>
           Salva contatto
         </button>
@@ -380,7 +378,7 @@
 
           <div class="tile">
             <svg class="ico" viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M22 16.9v2a2 2 0 0 1-2.2 2 18.7 18.7 0 0 1-8.2-3 18.5 18.5 0 0 1-5.7-5.7 18.7 18.7 0 0 1-3-8.2A2 2 0 0 1 4 2h2a2 2 0 0 1 2 1.7c.1.9.3 1.7.6 2.5a2 2 0 0 1-.5 2.1L7.3 9.1a14.5 14.5 0 0 0 5.6 5.6l.8-.8a2 2 0 0 1 2.1-.5c.8.3 1.6.5 2.5.6A2 2 0 0 1 22 16.9z"/>
+              <path d="M21 16.5v3a2 2 0 0 1-2.2 2A19 19 0 0 1 3.5 6.2 2 2 0 0 1 5.5 4h3a2 2 0 0 1 2 1.6c.2 1 .5 1.9.9 2.8a2 2 0 0 1-.5 2.2l-1.2 1.2a15.5 15.5 0 0 0 6.5 6.5l1.2-1.2a2 2 0 0 1 2.2-.5c.9.4 1.8.7 2.8.9A2 2 0 0 1 21 16.5z"/>
             </svg>
             <div>
               <b>Andrea</b>
@@ -390,7 +388,7 @@
 
           <div class="tile">
             <svg class="ico" viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M22 16.9v2a2 2 0 0 1-2.2 2 18.7 18.7 0 0 1-8.2-3 18.5 18.5 0 0 1-5.7-5.7 18.7 18.7 0 0 1-3-8.2A2 2 0 0 1 4 2h2a2 2 0 0 1 2 1.7c.1.9.3 1.7.6 2.5a2 2 0 0 1-.5 2.1L7.3 9.1a14.5 14.5 0 0 0 5.6 5.6l.8-.8a2 2 0 0 1 2.1-.5c.8.3 1.6.5 2.5.6A2 2 0 0 1 22 16.9z"/>
+              <path d="M21 16.5v3a2 2 0 0 1-2.2 2A19 19 0 0 1 3.5 6.2 2 2 0 0 1 5.5 4h3a2 2 0 0 1 2 1.6c.2 1 .5 1.9.9 2.8a2 2 0 0 1-.5 2.2l-1.2 1.2a15.5 15.5 0 0 0 6.5 6.5l1.2-1.2a2 2 0 0 1 2.2-.5c.9.4 1.8.7 2.8.9A2 2 0 0 1 21 16.5z"/>
             </svg>
             <div>
               <b>Alessandro</b>
@@ -409,9 +407,9 @@
         <div class="grid">
           <div class="tile">
             <svg class="ico" viewBox="0 0 24 24" aria-hidden="true">
-              <circle cx="12" cy="12" r="10"></circle>
-              <path d="M2 12h20"></path>
-              <path d="M12 2c3 3 4.5 6.5 4.5 10S15 19 12 22c-3-3-4.5-6.5-4.5-10S9 5 12 2z"></path>
+              <path d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2z"/>
+              <path d="M2 12h20"/>
+              <path d="M12 2c3 3 4.5 6.5 4.5 10S15 19 12 22c-3-3-4.5-6.5-4.5-10S9 5 12 2z"/>
             </svg>
             <div>
               <b>Sito ufficiale</b>
@@ -434,8 +432,8 @@
 
           <div class="tile">
             <svg class="ico" viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M12 21s-6-5.3-6-10a6 6 0 1 1 12 0c0 4.7-6 10-6 10z"></path>
-              <circle cx="12" cy="11" r="2"></circle>
+              <path d="M12 22s-7-5.8-7-11a7 7 0 1 1 14 0c0 5.2-7 11-7 11z"/>
+              <path d="M12 13.2a2.2 2.2 0 1 0 0-4.4 2.2 2.2 0 0 0 0 4.4z"/>
             </svg>
             <div>
               <b>Azienda</b>
@@ -449,8 +447,8 @@
 
           <div class="tile">
             <svg class="ico" viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M12 21s-6-5.3-6-10a6 6 0 1 1 12 0c0 4.7-6 10-6 10z"></path>
-              <circle cx="12" cy="11" r="2"></circle>
+              <path d="M12 22s-7-5.8-7-11a7 7 0 1 1 14 0c0 5.2-7 11-7 11z"/>
+              <path d="M12 13.2a2.2 2.2 0 1 0 0-4.4 2.2 2.2 0 0 0 0 4.4z"/>
             </svg>
             <div>
               <b>Store Eataly</b>
@@ -473,8 +471,8 @@
         <div class="grid">
           <div class="tile">
             <svg class="ico" viewBox="0 0 24 24" aria-hidden="true">
-              <circle cx="12" cy="12" r="10"></circle>
-              <path d="M12 6v6l4 2"></path>
+              <path d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2z"/>
+              <path d="M12 6v6l4 2"/>
             </svg>
             <div>
               <b>Apertura</b>
@@ -492,10 +490,8 @@
         <div class="grid">
 
           <div class="tile">
-            <!-- fungo (stilizzato) -->
             <svg class="ico" viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M4 10a8 8 0 0 1 16 0H4z"></path>
-              <path d="M9 10v8a3 3 0 0 0 6 0v-8"></path>
+              <path d="M12 3c-5 0-9 3-9 7h18c0-4-4-7-9-7zM9 10v6a3 3 0 0 0 6 0v-6H9z"/>
             </svg>
             <div>
               <b>Funghi freschi</b>
@@ -504,15 +500,8 @@
           </div>
 
           <div class="tile">
-            <!-- fiocco neve (stilizzato) -->
             <svg class="ico" viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M12 2v20"></path>
-              <path d="M4.5 7.5l15 9"></path>
-              <path d="M19.5 7.5l-15 9"></path>
-              <path d="M6 4l2 2"></path>
-              <path d="M18 4l-2 2"></path>
-              <path d="M6 20l2-2"></path>
-              <path d="M18 20l-2-2"></path>
+              <path d="M11 2h2v20h-2zM4 11h16v2H4zM4.5 6.5l1.4-1.4 13.6 13.6-1.4 1.4zM19.5 6.5l-1.4-1.4L4.5 18.7l1.4 1.4z"/>
             </svg>
             <div>
               <b>Linea gelo</b>
@@ -521,11 +510,8 @@
           </div>
 
           <div class="tile">
-            <!-- barattolo -->
             <svg class="ico" viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M8 3h8"></path>
-              <path d="M9 3v3c0 1 1 2 3 2s3-1 3-2V3"></path>
-              <path d="M7 9h10v11a2 2 0 0 1-2 2H9a2 2 0 0 1-2-2V9z"></path>
+              <path d="M7 3h10v3H7zM7 7h10v14a2 2 0 0 1-2 2H9a2 2 0 0 1-2-2V7z"/>
             </svg>
             <div>
               <b>Trasformati</b>
@@ -534,12 +520,8 @@
           </div>
 
           <div class="tile">
-            <!-- B2B -->
             <svg class="ico" viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M7 7h10"></path>
-              <path d="M7 12h10"></path>
-              <path d="M7 17h10"></path>
-              <path d="M4 5a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V5z"></path>
+              <path d="M6 12l3 3c.6.6 1.5.6 2.1 0l.9-.9.9.9c.6.6 1.5.6 2.1 0l3-3v6a2 2 0 0 1-2 2H8a2 2 0 0 1-2-2v-6z"/>
             </svg>
             <div>
               <b>Collaborazioni &amp; Forniture (B2B)</b>
@@ -570,7 +552,7 @@
 
       <hr class="sep">
 
-      <!-- SOCIAL (grandi, senza contorno) -->
+      <!-- SOCIAL (pieni, marroni, senza contorno) -->
       <div class="section alt">
         <h2>Social</h2>
         <div class="social">
@@ -578,25 +560,21 @@
           <a class="soc" href="https://www.facebook.com/p/Azienda-Agricola-Moretti-100054240050633/"
              target="_blank" rel="noopener noreferrer" referrerpolicy="no-referrer" aria-label="Facebook">
             <svg viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M14 8h2V5h-2c-2 0-3.5 1.6-3.5 3.6V11H8v3h2.5v7H14v-7h2l.5-3H14V8.9c0-.5.3-.9 1-.9z" fill="none"></path>
-              <path d="M14 8h2V5h-2c-2 0-3.5 1.6-3.5 3.6V11H8v3h2.5v7H14v-7h2l.5-3H14V8.9c0-.5.3-.9 1-.9z"
-                    fill="none" stroke="var(--brand)" stroke-width="2" stroke-linejoin="round"></path>
+              <path d="M13.5 22v-8h2.7l.5-3H13.5V9.1c0-.9.3-1.6 1.7-1.6H16.9V4.8c-.3 0-1.3-.1-2.5-.1-2.5 0-4.2 1.5-4.2 4.3V11H7.5v3h2.7v8h3.3z"/>
             </svg>
           </a>
 
           <a class="soc" href="https://www.instagram.com/azienda_agricola_moretti/"
              target="_blank" rel="noopener noreferrer" referrerpolicy="no-referrer" aria-label="Instagram">
             <svg viewBox="0 0 24 24" aria-hidden="true">
-              <rect x="4" y="4" width="16" height="16" rx="5"></rect>
-              <circle cx="12" cy="12" r="3.5"></circle>
-              <circle cx="17" cy="7" r="1"></circle>
+              <path d="M7.5 2h9A5.5 5.5 0 0 1 22 7.5v9A5.5 5.5 0 0 1 16.5 22h-9A5.5 5.5 0 0 1 2 16.5v-9A5.5 5.5 0 0 1 7.5 2zm4.5 5a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm0 2.2A2.8 2.8 0 1 0 12 15a2.8 2.8 0 0 0 0-5.8z"/>
             </svg>
           </a>
 
-          <a class="soc tiktok" href="https://www.tiktok.com/@aziendamoretti"
+          <a class="soc" href="https://www.tiktok.com/@aziendamoretti"
              target="_blank" rel="noopener noreferrer" referrerpolicy="no-referrer" aria-label="TikTok">
             <svg viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M16 3c1 1.8 2.6 3 5 3v3c-2-.1-3.8-.9-5-2v7a6 6 0 1 1-6-6c.4 0 .8 0 1 .1v3.1a2.7 2.7 0 1 0 2 2.6V3h3z"></path>
+              <path d="M16 3c1.1 1.9 2.6 3 5 3v3.1c-1.7-.1-3.2-.6-5-1.7v6.2a6 6 0 1 1-6-6c.4 0 .8 0 1.2.1v3.3a2.7 2.7 0 1 0 1.9 2.6V3H16z"/>
             </svg>
           </a>
 
@@ -614,16 +592,15 @@
          href="https://wa.me/393465740673?text=Salve%2C%20ho%20scansionato%20il%20QR%20code%20e%20vorrei%20informazioni."
          aria-label="WhatsApp">
         <svg class="ico" viewBox="0 0 24 24" aria-hidden="true">
-          <path d="M20 11.6a8 8 0 0 1-11.9 6.9L4 19l.6-4.1A8 8 0 1 1 20 11.6z"></path>
-          <path d="M8.8 9.1c.2-.3.4-.3.6-.3h.5c.2 0 .4.1.5.4l.7 1.7c.1.2.1.4 0 .6l-.3.4c-.1.2-.1.3 0 .5.3.6.8 1.2 1.4 1.6.2.1.4.1.5 0l.5-.5c.2-.2.3-.2.6-.1l1.8.8c.2.1.3.2.3.4 0 .6-.4 1.1-1 1.3-.6.2-1.3.2-2-.1-2.3-1-3.8-3.2-3.9-3.4-.4-.5-1.2-1.6-1.2-2.5 0-.9.4-1.4.7-1.7z"
-                fill="currentColor" stroke="none"></path>
+          <path d="M12 2a9 9 0 0 0-7.8 13.5L3 22l6.7-1.8A9 9 0 1 0 12 2z"/>
+          <path d="M9.3 7.6c.2-.3.4-.3.6-.3h.5c.2 0 .4.1.5.4l.7 1.7c.1.2.1.4 0 .6l-.3.4c-.1.2-.1.3 0 .5.3.6.8 1.2 1.4 1.6.2.1.4.1.5 0l.5-.5c.2-.2.3-.2.6-.1l1.8.8c.2.1.3.2.3.4 0 .6-.4 1.1-1 1.3-.6.2-1.3.2-2-.1-2.3-1-3.8-3.2-3.9-3.4-.4-.5-1.2-1.6-1.2-2.5 0-.9.4-1.4.7-1.7z"/>
         </svg>
         <span class="lbl">WhatsApp</span>
       </a>
 
       <a class="sbtn" href="tel:+390688936064" aria-label="Chiama (fisso)">
         <svg class="ico" viewBox="0 0 24 24" aria-hidden="true">
-          <path d="M22 16.9v2a2 2 0 0 1-2.2 2 18.7 18.7 0 0 1-8.2-3 18.5 18.5 0 0 1-5.7-5.7 18.7 18.7 0 0 1-3-8.2A2 2 0 0 1 4 2h2a2 2 0 0 1 2 1.7c.1.9.3 1.7.6 2.5a2 2 0 0 1-.5 2.1L7.3 9.1a14.5 14.5 0 0 0 5.6 5.6l.8-.8a2 2 0 0 1 2.1-.5c.8.3 1.6.5 2.5.6A2 2 0 0 1 22 16.9z"/>
+          <path d="M21 16.5v3a2 2 0 0 1-2.2 2A19 19 0 0 1 3.5 6.2 2 2 0 0 1 5.5 4h3a2 2 0 0 1 2 1.6c.2 1 .5 1.9.9 2.8a2 2 0 0 1-.5 2.2l-1.2 1.2a15.5 15.5 0 0 0 6.5 6.5l1.2-1.2a2 2 0 0 1 2.2-.5c.9.4 1.8.7 2.8.9A2 2 0 0 1 21 16.5z"/>
         </svg>
         <span class="lbl">Chiama</span>
       </a>
@@ -633,8 +610,8 @@
          target="_blank" rel="noopener noreferrer" referrerpolicy="no-referrer"
          aria-label="Naviga">
         <svg class="ico" viewBox="0 0 24 24" aria-hidden="true">
-          <path d="M12 21s-6-5.3-6-10a6 6 0 1 1 12 0c0 4.7-6 10-6 10z"/>
-          <circle cx="12" cy="11" r="2"/>
+          <path d="M12 22s-7-5.8-7-11a7 7 0 1 1 14 0c0 5.2-7 11-7 11z"/>
+          <path d="M12 13.2a2.2 2.2 0 1 0 0-4.4 2.2 2.2 0 0 0 0 4.4z"/>
         </svg>
         <span class="lbl">Naviga</span>
       </a>
@@ -644,7 +621,6 @@
 
   <script>
   (function(){
-    // vCard (con fisso + titolari)
     var btn = document.getElementById('saveContact');
     if(!btn) return;
 
